[package]
name = "leetcode-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
async-trait = "0.1.58"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
dotenv = "0.15.0"
home = "0.5.4"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
